welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:46: error: expected class or object definition
def faireLigne(nbColonne : Int) {
^MethodsPicture:58: error: Unmatched closing brace '}' ignored here
}
^